Implement method to fetch all filter options to display on frontend